--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Desafío Branching</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Space+Mono" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="./assets/css/style.css">
+  <script defer src="./assets/js/script.js"></script>
 
 </head>
 <body>
