se corrige categoria header mal inexada

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>Ir a Github</h1>
-    <a href="https://github.com/">
-      <img src="./assets/img/logo-github.png" alt="octocat">
-    </a>
-    <button type="button" class="btn">
-      <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
-    </button>
+    <header>
+      <h1>Ir a Github</h1>
+      <a href="https://github.com/">
+        <img src="./assets/img/logo-github.png" alt="octocat">
+      </a>
+      <button type="button" class="btn">
+        <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+      </button>
+    </header>
   </div>
 </body>
 </html>
