--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Ir a Github</h1>
-      <a href="https://github.com/">
-        <img src="./assets/img/logo-github.png" alt="octocat">
-      </a>
-      <button type="button" class="btn">
-        <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
-      </button>
-    </header>
-  </div>
+  <header class="container">
+    <h1>Ir a Github</h1>
+    <a href="https://github.com/">
+      <img src="./assets/img/logo-github.png" alt="octocat" width="85px">
+    </a>
+    <button type="button" class="btn">
+      <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
+    </button>
+  </header>
 </body>
 </html>
